new widgets; minor fixes in index.html

--- a/html/smart_mirror_index.html
+++ b/html/smart_mirror_index.html
@@ -106,8 +106,8 @@ function loadWidget(url, position, widgetType, context) { // call from python
 
 function restCall(url, callback, position, queryString) { // call from widget js
   const xhr  = new XMLHttpRequest();
-  if (queryString.localeCompare("")) {
-      url = url + "?" + queryString;
+  if (queryString.localeCompare("None")) {
+      url = url + queryString;
   }
   xhr.open('GET', url, true);
   xhr.onload = function () {
